force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/VN_ParticipanteComPerfilCompativel__c.object-meta.xml
<CustomObject>
    <description>Lista relacionada do Youbet, participantes que possuem compatibilidade de cargo, área, liderança e elegibilidade no momento da criação do Youbet.</description>
    <label>Participante Com Perfil Compatível</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>No. Participante</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participantes Com Perfis Compatíveis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>