force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Campo preenchido via workflow para ser utilizado no disparo de alerta de email Serasa: Inicio do leilão</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>