force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_AcessouYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_AcessouYoubet__c</fullName>
    <formula>V_NumeroAcessos__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acessou Youbet</label>
    <type>Checkbox</type>
</CustomField>