force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Area__c.field-meta.xml
<CustomField>
    <fullName>V_Area__c</fullName>
    <description>Área do participante no momento de criação do Youbet.</description>
    <inlineHelpText>Área do participante no momento de criação do Youbet.</inlineHelpText>
    <label>Área</label>
    <length>255</length>
    <type>Text</type>
</CustomField>