force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Ativo__c.field-meta.xml
<CustomField>
    <fullName>V_Ativo__c</fullName>
    <description>Indica se o Youbet está ativo ou não.</description>
    <formula>V_Reward__r.V_IsActive__c</formula>
    <inlineHelpText>Indica se o Youbet está ativo ou não.</inlineHelpText>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>