force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Cargo__c.field-meta.xml
<CustomField>
    <fullName>V_Cargo__c</fullName>
    <description>Cargo do participante no momento de criação do Youbet.</description>
    <inlineHelpText>Cargo do participante no momento de criação do Youbet.</inlineHelpText>
    <label>Cargo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>