force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_DatahoraFinal__c.field-meta.xml
<CustomField>
    <fullName>V_DatahoraFinal__c</fullName>
    <description>Data e hora final do Youbet.</description>
    <formula>V_Reward__r.V_DataHoraFimYoubet__c</formula>
    <inlineHelpText>Data e hora final do Youbet.</inlineHelpText>
    <label>Data/hora Final</label>
    <type>DateTime</type>
</CustomField>