force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_DatahoraInicio__c.field-meta.xml
<CustomField>
    <fullName>V_DatahoraInicio__c</fullName>
    <description>Data e hora de início do Youbet.</description>
    <formula>V_Reward__r.V_DataHoraInicioYoubet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data e hora de início do Youbet.</inlineHelpText>
    <label>Data/hora de Início</label>
    <type>DateTime</type>
</CustomField>