force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_EmailDinamize__c.field-meta.xml
<CustomField>
    <fullName>V_EmailDinamize__c</fullName>
    <description>Campo tipo email criado para que o Dinamize identifique o modo de exibição como válido para as integrações.</description>
    <label>Email Dinamize</label>
    <type>Email</type>
</CustomField>