force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_EmailParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_EmailParticipante__c</fullName>
    <formula>V_Member__r.FieloPLT__Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Participante</label>
    <type>Text</type>
</CustomField>