force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_EnviaEmailInicioLeilao__c.field-meta.xml
<CustomField>
    <fullName>V_EnviaEmailInicioLeilao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envia Email Inicio Leilão</label>
    <type>Checkbox</type>
</CustomField>