force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Finalizado__c.field-meta.xml
<CustomField>
    <fullName>V_Finalizado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo preenchido via código (Class SX_Reward_After) quando o Nome do vencedor é alterado.</description>
    <inlineHelpText>Youbet Finalizado</inlineHelpText>
    <label>Finalizado</label>
    <type>Checkbox</type>
</CustomField>