force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_FormulaSaldoInsuficiente__c.field-meta.xml
<CustomField>
    <fullName>V_FormulaSaldoInsuficiente__c</fullName>
    <description>Verifica se o saldo é menor que o lance mínimo</description>
    <formula>V_Saldo__c &lt;V_Reward__r.V_LanceMinimo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Se assinalado, indica que o saldo do participante era menor do que o lance mínimo no momento da criação do Youbet.</inlineHelpText>
    <label>Saldo Insuficiente</label>
    <type>Checkbox</type>
</CustomField>