force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_IDParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_IDParticipante__c</fullName>
    <formula>CASESAFEID(V_Member__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Participante</label>
    <type>Text</type>
</CustomField>