force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Iniciativa__c.field-meta.xml
<CustomField>
    <fullName>V_Iniciativa__c</fullName>
    <description>Iniciativa (Youbet Perene ou Complementar) do Leilão.</description>
    <formula>TEXT( V_Reward__r.Iniciativa__c )</formula>
    <label>Iniciativa</label>
    <type>Text</type>
</CustomField>