force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Lideranca__c.field-meta.xml
<CustomField>
    <fullName>V_Lideranca__c</fullName>
    <description>Liderança do participante no momento de criação do Youbet.</description>
    <inlineHelpText>Liderança do participante no momento de criação do Youbet.</inlineHelpText>
    <label>Liderança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>