force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Member__c.field-meta.xml
<CustomField>
    <fullName>V_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Participante relacionado ao youbet de compatibilidade.</description>
    <inlineHelpText>Participante relacionado ao youbet de compatibilidade.</inlineHelpText>
    <label>Participante</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Youbets Compatíveis</relationshipLabel>
    <relationshipName>V_RewardsCompativeis</relationshipName>
    <type>Lookup</type>
</CustomField>