force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_NomeTramento__c.field-meta.xml
<CustomField>
    <fullName>V_NomeTramento__c</fullName>
    <description>Nome de tratamento do participante</description>
    <inlineHelpText>Nome de tratamento do participante</inlineHelpText>
    <label>Nome de tratamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>