force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_NumeroAcessos__c.field-meta.xml
<CustomField>
    <fullName>V_NumeroAcessos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Número de Acessos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>