force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_PodeParticiparLeilao__c.field-meta.xml
<CustomField>
    <fullName>V_PodeParticiparLeilao__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo controle que já nasce selecionado e serve para dizer se o participante pode ou não dar lances no leilão.</description>
    <label>Pode participar do Leilão?</label>
    <type>Checkbox</type>
</CustomField>