force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_QtdeLancesRealizados__c.field-meta.xml
<CustomField>
    <fullName>V_QtdeLancesRealizados__c</fullName>
    <description>Indica a quantidade de lances realizados pelos participantes no Youbet.</description>
    <formula>V_Reward__r.V_QtdeLancesRealizados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica a quantidade de lances realizados pelos participantes no Youbet.</inlineHelpText>
    <label>Qtde de Lances Realizados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>