force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Reward__c.field-meta.xml
<CustomField>
    <fullName>V_Reward__c</fullName>
    <description>Youbet relacionado ao participante com compatibilidade de critérios (Cargo, Área, Liderança e Elegibilidade).</description>
    <inlineHelpText>Youbet relacionado ao participante com compatibilidade de critérios (Cargo, Área, Liderança e Elegibilidade).</inlineHelpText>
    <label>Youbet</label>
    <referenceTo>FieloPLT__Reward__c</referenceTo>
    <relationshipLabel>Participantes Com Perfis Compatíveis</relationshipLabel>
    <relationshipName>ParticipantesPerfiCompativeis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>