force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Saldo__c.field-meta.xml
<CustomField>
    <fullName>V_Saldo__c</fullName>
    <description>Saldo do participante no momento de criação do Youbet.</description>
    <inlineHelpText>Saldo do participante no momento de criação do Youbet.</inlineHelpText>
    <label>Betcoins disponíveis para leilão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>