force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_SaldoInsuficiente__c.field-meta.xml
<CustomField>
    <fullName>V_SaldoInsuficiente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se assinalado, indica que o saldo do participante era menor do que o lance mínimo no momento da criação do Youbet. Campo atualizado por workflow.</description>
    <inlineHelpText>Se assinalado, indica que o saldo do participante era menor do que o lance mínimo no momento da criação do Youbet.</inlineHelpText>
    <label>Saldo Insuficiente</label>
    <type>Checkbox</type>
</CustomField>