force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_SaldoMaiorQueLanceGanhador__c.field-meta.xml
<CustomField>
    <fullName>V_SaldoMaiorQueLanceGanhador__c</fullName>
    <formula>V_Saldo__c&gt;=V_ValorLanceGanhador__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo maior que lance ganhador</label>
    <type>Checkbox</type>
</CustomField>