force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Setor__c.field-meta.xml
<CustomField>
    <fullName>V_Setor__c</fullName>
    <description>Setor do participante no momento de criação do Youbet.</description>
    <inlineHelpText>Setor do participante no momento de criação do Youbet.</inlineHelpText>
    <label>Setor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>