force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_ValorLanceGanhador__c.field-meta.xml
<CustomField>
    <fullName>V_ValorLanceGanhador__c</fullName>
    <description>Indica o valor do lance ganhador do Youbet.</description>
    <formula>V_Reward__r.V_ValorLanceGanhador__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica o valor do lance ganhador do Youbet.</inlineHelpText>
    <label>Valor do Lance Ganhador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>