force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_Vencedor__c.field-meta.xml
<CustomField>
    <fullName>V_Vencedor__c</fullName>
    <description>Nome do vencedor do youbet.</description>
    <formula>V_Reward__r.V_NomeVencedor__c</formula>
    <inlineHelpText>Nome do vencedor do youbet.</inlineHelpText>
    <label>Vencedor</label>
    <type>Text</type>
</CustomField>