force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/fields/V_YoubetProcessado__c.field-meta.xml
<CustomField>
    <fullName>V_YoubetProcessado__c</fullName>
    <formula>V_Reward__r.V_YoubetProcessado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Youbet Processado</label>
    <type>DateTime</type>
</CustomField>