force-app/main/default/objects/VN_ParticipanteComPerfilCompativel__c/listViews/X002_Insiders_InformaYoubetPerene.listView-meta.xml
<ListView>
    <fullName>X002_Insiders_InformaYoubetPerene</fullName>
    <columns>V_Member__c</columns>
    <columns>V_Reward__c</columns>
    <columns>V_EmailParticipante__c</columns>
    <columns>V_DatahoraInicio__c</columns>
    <columns>V_DatahoraFinal__c</columns>
    <columns>V_Ativo__c</columns>
    <columns>V_IDParticipante__c</columns>
    <columns>V_EmailDinamize__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>V_YoubetProcessado__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>V_Iniciativa__c</field>
        <operation>equals</operation>
        <value>Youbet Perene</value>
    </filters>
    <label>002_Insiders_InformaYoubet Perene</label>
    <language>pt_BR</language>
</ListView>